Revision history for DBIx::Class

    * Fixes
        - Make sure Oracle identifier shortener applies to auto-generated
          column names, so we stay within the 30-char limit (RT#58271)
        - Fix a Storage/$dbh leak introduced by th migration to
          Try::Tiny (this is *not* a Try::Tiny bug)

    * Misc
        - Test suite default on-disk database now checks for Win32
          fail-conditions even when running on other OSes

0.08122 2010-05-03 17:41 (UTC)
    * New Features
        - Add DBIx::Class::FilterColumn for non-ref filtering
        - ::Storage::DBI now correctly preserves a parent $dbh from
          terminating children, even during interpreter-global
          out-of-order destruction
        - dbicadmin supports an -I option with the same semantics as
          perl itself
        - InflateColumn::DateTime support for MSSQL via DBD::Sybase
        - Millisecond precision support for MSSQL datetimes for
          InflateColumn::DateTime
        - Oracle-specific hierarchical query syntax support:
          CONNECT BY (NOCYCLE) / START WITH / ORDER SIBLINGS BY
        - Support connecting using $ENV{DBI_DSN} and $ENV{DBI_DRIVER}
        - current_source_alias method on ResultSet objects to
          determine the alias to use in programatically assembled
          search()es (originally added in 0.08100 but unmentioned)
        - Rewrite/unification of all subselecting limit emulations
          (RNO, Top, RowNum) to be much more robust wrt complex joined
          resultsets
        - MSSQL limits now don't require nearly as many applications of
          the unsafe_subselect_ok attribute, due to optimized queries
        - Support for Generic Subquery limit "emulation" - awfully slow
          and inefficient but works on almost any db, and is preferred
          to software limit emulation
        - Sybase ASE driver now uses SET ROWCOUNT where possible, and
          Generic Subquery otherwise for limit support instead of always